# resolv-pipelines

./: .gitignore  README.md  activate_conda_env.sh  environment.yml  pyproject.toml  setup_conda_env.sh
beam/dofn/: canonical.py  metrics.py  note_sequence.py  utilities.py
beam/dofn/data/: canonical.py
beam/pipelines/: canonicalize_dataset_pipeline.py  compute_metrics_pipeline.py  draw_histograms_pipeline.py  generate_dataset_pipeline.py
beam/pipelines/data/: canonicalize_dataset_pipeline.py
infrastructure/: build.sh  start.sh  stop.sh
infrastructure/executor/: docker-compose.yaml  extra-requirements.txt  requirements.txt
infrastructure/executor/sdk-harness/: Dockerfile
infrastructure/orchestrator/: Dockerfile  docker-compose.yaml  requirements.txt
infrastructure/orchestrator/dags/: .airflowignore  canonicalize_dataset.py  compute_metrics.py  draw_metrics_histograms.py  generate_dataset.py  import_archive_dataset.py
infrastructure/storage/: docker-compose.yaml
scripts/: constants.py  utilities.py
scripts/dataset/: canonicalize_dataset.py  compute_metrics.py  draw_metrics_histograms.py  generate_dataset.py  import_archive_dataset.py
scripts/datasets/data/: canonicalize_dataset.py  import_archive_dataset.py
scripts/ml/data_loaders/: base.py  tfrecord_loader.py
scripts/utilities/: beam.py  config.py  constants.py
src/resolv_pipelines/: __init__.py
src/resolv_pipelines/canonical/: __init__.py  base.py  exceptions.py  wrapper.py
src/resolv_pipelines/data/: __init__.py
src/resolv_pipelines/data_loaders/: base.py  tfrecord_loader.py
src/resolv_pipelines/dofn/: base.py
src/resolv_pipelines/pipelines/: __init__.py
tests/data_loaders/: tfrecord_loader_test.py
tests/pipelines/datasets/: canonicalize_dataset_test.py  draw_histograms_test.py  import_dataset_test.py  process_dataset_test.py  (+1 more)
(+69 files in other folders)
